# rust-dom-compiler

./: Cargo.toml
src/: lib.rs
src/css_ops/: color_ops.rs  css.rs  mod.rs
src/css_ops/macros/: Cargo.toml
src/css_ops/macros/src/: helpers.rs  lib.rs  parse_impl.rs
src/css_ops/properties/: animation.rs  background.rs  mod.rs
src/html_ops/: html.rs
src/misc/: mod.rs  replaceable_hashset.rs
src/update_wasm/: diffing.rs  mod.rs
src/wasm_gen/: generate.rs
